--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,163 @@
-main {
+body {
+  font: 18px 'Poppins';
+  line-height: 28px;
+  color: #656073;
+}
 
+.main-wrap {
+
+}
+
+.main-title-page {
+  display: none;
+}
+
+.section {
+
+}
+
+.section-title {
+  font-family: 'Montserrat-bold';
+  font-size: 54px;
+  line-height: 66px;
+  text-align: center;
+
+  &--white {
+    color: white;
+  }
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.first-block {
+  background: #4256D6;
+
+
+  &__inner {
+    padding-top: 150px;
+
+  }
+
+  &__title {
+    margin-bottom: 80px;
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 940px;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+
+  &__item {
+    color: white;
+    max-width: 355px;
+    width: 50%;
+    margin-bottom: 30px;
+    position: relative;
+    padding-left: 45px;
+
+    &:before {
+      content: url("../img/circle-check--yellow.svg");
+      width: 28px;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+  }
+
+  &__video {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  &__video-inner {
+    padding-top: 155px;
+    position: relative;
+
+    &:before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #011627;
+      height: 170px;
+    }
+  }
+
+  &__video-laptop {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 1140px;
+    height: 630px;
+    margin: 0 auto;
+    z-index: 1;
+    position: relative;
+
+    &:before {
+      content: url('../img/konoha.svg');
+      position: absolute;
+      bottom: 70px;
+      z-index: -1;
+      left: -130px;
+    }
+    &:after {
+      content: url('../img/konoha.svg');
+      position: absolute;
+      bottom: 70px;
+      z-index: -1;
+      right: -130px;
+      transform: scale(-1, 1);
+    }
+  }
+
+  &__video-laptop-bg {
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__video-link {
+    display: flex;
+    height: 512px;
+    position: absolute;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    max-width: 858px;
+    width: 100%;
+    top: 44px;
+    margin-left: 1px;
+  }
+}
+
+
+.clock-block {
+  background-color: #011627;
+
+  &__inner {
+
+  }
+
+  &__txt {
+
+  }
+
+  &__item {
+
+  }
+
+  &__btn-wrap {
+
+  }
 }
