--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -24,5 +24,5 @@ html(lang="")
 
       include modules/_footer
     block scripts 
-      script(src='/js/libs.min.js')
-      script(src='/js/main.min.js')
+      script(src='js/libs.min.js')
+      script(src='js/main.min.js')
